@@ -163,6 +163,7 @@ if options['server']
 
   mime_types = WEBrick::HTTPUtils::DefaultMimeTypes
   mime_types.store 'js', 'application/javascript'
+  mime_types.store 'svg', 'image/svg+xml'
 
   s = HTTPServer.new(
     :Port            => options['server_port'],
